@@ -1,1 +1,18 @@
 # Flink-training
+
+## Set-up
+
+#### If you're using an IDE like IntelliJ:
+
+Go to Run > Edit Configurations
+
+Add this to VM Options:
+
+    --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED
+
+
+## Project contents
+1. quick start
+   2. word count using lambda expressions
+   3. word count using Batch processing
+   4. word count using stream processing
